--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   get_it: ^7.6.7
   cached_network_image: ^3.3.1
   flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.10+1
+  form_field_validator: ^1.1.0
+  go_router: ^13.2.0
+  intl: ^0.19.0
+  textfield_tags: ^2.1.1
+  image_picker: ^1.0.7
+  permission_handler: ^11.3.0
+  device_info_plus: ^9.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +74,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
+    - assets/bg/
+    - assets/icon/
+  fonts:
+    - family: montserrat_regular
+      fonts:
+        - asset: assets/font/montserrat_regular.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
