--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   image_picker: ^1.0.7
   permission_handler: ^11.3.0
   device_info_plus: ^9.1.2
-
+  shared_preferences: ^2.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -78,6 +78,7 @@ flutter:
     - assets/
     - assets/bg/
     - assets/icon/
+    - assets/icon/bar/
   fonts:
     - family: montserrat_regular
       fonts:
