--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler: ^11.3.0
   device_info_plus: ^9.1.2
   shared_preferences: ^2.2.2
+  number_paginator: ^0.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
